--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
   - init: pip install -r requirements.txt
-    command: errbot --init
+  - command: /workspace/.pip.modules/bin/errbot --init
